--- a/index.html
+++ b/index.html
@@ -2,20 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ângela Roberta</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Press+Start+2P&family=Roboto:wght@300;500;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Projetos</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>  
-        <h1 class="site-title">Ângela Roberta</h1>
-        <h2 class="site-subtitle">Msc. em Politicas Publicas</h2>
+        <div>
+          <h1 class="site-title">Ângela Roberta</h1>
+          <h2 class="site-subtitle">Msc. em Politicas Publicas</h2>
+        </div>
       </header>
+      <section class="portfolio">
+        <h2>Projetos</h2>
+          <div class="grid">
+            <figure>
+              <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+              <figcaption>eCommerce</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+              <figcaption>Mobile</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+              <figcaption>Web design</figcaption>
+            </figure>
+            <figure>
+              <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+              <figcaption>Projetos pessoais</figcaption>
+            </figure>
+          </div>
+      </section>
+      <section class="contato">
+        <h2>Contato</h2>
+        <div class="grid icons">
+          <a target="_blank" href="https://github.com/vanessametonini">
+            Github
+          </a>
+          <a target="_blank" href="https://twitter.com/vanessametonini">
+            twitter
+          </a>
+          <a target="_blank" href="https://linkedin.com/in/vanessametonini">
+            linkedin
+          </a>
+          <a href="mailto:vanessa.tonini@caelum.com.br">
+            email
+          </a>
+        </div>
+      </section>
 </body>
 </html>
